<resources>
    <string name="app_name">ScoutCoder</string>
    <string name="action_settings">Settings</string>
    <string name="numericConversionRadioButton">Numerico</string>
    <string name="alphabeticonversionRadioButton">Alfabetico</string>
    <string name="morseConversionRadioButton">Morse</string>
    <string name="key1TWLabel">Origine</string>
    <string name="key2TWLabel">Destinazione</string>
    <string name="keyResumeTextView"><![CDATA[Chiave: %s -> %s (%s)]]></string>
    <string name="originTextLabel">Testo origine</string>
    <string name="encodedTextLabel">Testo codificato</string>
    <string name="encodeButtonText">Codifica</string>
    <string name="resetButtonText">Reset</string>
    <string name="invertTextSwitchLabel">Inverti Testo</string>
    <string name="action_share_label">Condivdi</string>
    <string name="action_encode_label">Codifica</string>
    <string name="action_reset_label">Reset</string>
    <string name="share_using">Condividi testo codificato</string>
    <string name="share_subject">ScoutCoder testo cifrato</string>
    <string name="admob_app_id">ca-app-pub-7085815040234496~3352511716</string>
    <string name="banner_ad_unit_id">ca-app-pub-7085815040234496/4000853752</string>
    <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
</resources>
